[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labreports"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE.txt" }
keywords = []
authors = [
  { name = "Jendrik Seipp", email = "jendrik.seipp@liu.se" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jendrikseipp/labreports#readme"
Issues = "https://github.com/jendrikseipp/labreports/issues"
Source = "https://github.com/jendrikseipp/labreports"
